# langgraph-agent-v2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  USAGE_TUTORIAL.md  agent_frameworks_comparison.md  agent_frameworks_comparison_v2.md  debug_route.py  opencode.json  pyproject.toml  server.py  test_batching.py
.opencode/commands/: test.md
.opencode/plans/: fix-sidebar-projectpath-acp.md  sse-ui-alignment.md
.trae/documents/: dynamic_graph_plan.md  frontend_beautify_plan.md  frontend_optimization_plan.md
config/: acp_agents.json  agents.json  skills.json  tools.json  workflows.json
docs/: agent-sse.html  agent-workspace.html  diff.md  opencode.json
docs/design/: SSE.html
docs/designDocs/: agent-flow-design.md  langgraph-agent-v2.md  modif-desing.md  orchestrator-v2-plan.md
docs/result/: agent-workflow.html  eval_resul.html  query_result.html
memory/: experiences.md
memory/audit/: chat-2026-05-27_15-12-40.jsonl  chat-2026-05-27_15-17-33.jsonl  chat-2026-05-27_15-23-30.jsonl  chat-2026-05-27_15-30-02.jsonl  chat-2026-05-27_15-32-20.jsonl  chat-2026-05-27_15-37-08.jsonl  chat-2026-05-27_15-37-30.jsonl  chat-2026-05-27_15-40-13.jsonl  chat-2026-05-27_15-44-16.jsonl  (+11 more)
tests/: conftest.py  test_acp.py  test_compression.py  test_config.py  test_error_handler.py  test_eval.py  test_event_bus.py  test_file_service.py  test_mock_flow.py  test_multi_round_context.py  test_orchestrator_v2.py  test_server.py  test_supervisor.py  test_tools.py
tmp/: agent_frameworks.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+125 files in other folders)
