[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agent-v2"
version = "0.1.0"
description = "Simplified AI Agent with multi-agent supervisor, context compression, memory, and SSE"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-supervisor>=0.0.31",
    "langchain-openai",
    "langchain-anthropic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken",
    "chromadb",
    "sqlite-utils",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]
